UY-1590 CR fixes round 2